kubernetes/clusters/staging/k8sgpt-core.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: k8sgpt-operator-system
