kubernetes/clusters/staging/r2r.yaml
apiVersion: v1
kind: Service
metadata:
  name: r2r
  namespace: oblivion
spec:
  selector:
    app: r2r
  ports:
    - protocol: TCP
      port: 7272
      targetPort: 7272
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: r2r
  namespace: oblivion
spec:
  replicas: 1
  selector:
    matchLabels:
      app: r2r
  template:
    metadata:
      labels:
        app: r2r
    spec:
      serviceAccountName: r2r
      restartPolicy: Always
      containers:
        - name: controller
          image: winwithcherwin/r2r:latest
          imagePullPolicy: IfNotPresent
          command:
            - python3
            - -m
            - r2r.serve
          volumeMounts:
            - name: r2r-config-volume
              mountPath: /etc/r2r
              readOnly: true
      volumes:
        - name: r2r-config-volume
          configMap:
            name: r2r-config
